@@ -1,3 +1,11 @@
+2001-12-21  Glynn Foster  <glynn.foster@sun.com>
+
+	* panel-gconf.c, session.c: Big heap of debug crap. It should
+	help someone trying to figure out the profile stuff because I'm
+	not going to fix it until after Christmas. Yeesh, like I should 
+	be out drinking at this very moment. May your Christmas give you
+	a warm tingly feeling and most importantly, have the craic...
+
 2001-12-21  Mark McLoughlin  <mark@skynet.ie>
 
 	* applet.[ch]:
